# zero2prod.rs

./: .gitignore  Cargo.toml
.cargo/: config.toml
.github/workflows/: ci.yml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs
src/routes/: mod.rs  subscriptions.rs
tests/: health_check.rs
