[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"
authors = ["Rohit Prakash <rohitp934@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4.3.1"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11.17"
